lesson05/ quiz05 수정

--- a/src/main/resources/static/css/lesson05/style.css
+++ b/src/main/resources/static/css/lesson05/style.css
@@ -1,2 +1,3 @@
 @charset "UTF-8";
-body{background-color: #999};
+#menu{background-color: #6495EC}
+.nav-item{color: white; font-weight: bold; font-size: 20px}
